<!--
  ~ Copyright 2016 Flynn van Os
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Material Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Events</string>

    <string name="event_name">Event name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="set_category">Set the event category</string>
    <string name="date">Date</string>
    <string name="set_date">Set the event date</string>
    <string name="time">Time</string>
    <string name="set_time">Set the event time (optional)</string>
    <string name="no_title_set">Please enter a title</string>
    <string name="no_date_set">Please set a date</string>
    <string name="no_category_set">Please select a category</string>
    <string name="no_description">No description</string>


    <string name="item_removed">Item removed</string>
    <string name="undo">Undo</string>

    <string name="days_remaining">days</string>
    <string name="day_remaining">day</string>

    <string name="hours_remaining">hours</string>
    <string name="hour_remaining">hour</string>

    <string name="minutes_remaining">minutes</string>
    <string name="minute_remaining">minute</string>

    <!--Category related strings-->
    <string name="academic">Academic</string>
    <string name="birthday">Birthday</string>
    <string name="child">Child</string>
    <string name="entertainment">Entertainment</string>
    <string name="relaxation">Relaxation</string>
    <string name="product_release">Release Date</string>
    <string name="other">Other</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="work">Work</string>

    <string name="title_activity_new_event">New Event</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>

    <string name="hour_short">h</string>
    <string name="minute_short">m</string>
    <string name="second_short">s</string>
    <string name="transition_title">title transition</string>
    <string name="transition_desc">desc transition</string>

    <string name="no_events">No events added</string>
    <string name="click_to_add">Click to add a new event</string>
</resources>
