<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oxapps.materialcountdown.NewEventActivity"
    tools:showIn="@layout/activity_new_event">
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <RelativeLayout
        style="@style/MaterialRlButton"
        android:id="@+id/new_event_category">

        <ImageView
            android:id="@+id/iv_new_event_category"
            style="@style/MaterialListIcon"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_set_category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginLeft="72dp"
            android:text="@string/category"
            android:textSize="16sp"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tv_set_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:paddingBottom="16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/set_category"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/MaterialRlButton"
        android:id="@+id/new_event_date">
        <ImageView
            android:id="@+id/iv_new_event_date"
            style="@style/MaterialListIcon"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_set_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginLeft="72dp"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tv_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:paddingBottom="16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/set_date"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/MaterialRlButton"
        android:id="@+id/new_event_time">
        <ImageView
            android:id="@+id/iv_new_event_time"
            style="@style/MaterialListIcon"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_set_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginLeft="72dp"
            android:text="@string/time"
            android:textSize="16sp"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/tv_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:paddingBottom="16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/set_time"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"/>
    </RelativeLayout>


    <!--<CheckBox
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:checked="false"
        android:layout_marginLeft="4dp"
        android:paddingLeft="36dp"
        android:text="@string/show_notifications"/>-->





</LinearLayout>
