<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Flynn van Os
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oxapps.materialcountdown.detail.EventDetailActivity"
    tools:showIn="@layout/activity_event_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eventDetailDays"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="5 days" />

        <LinearLayout
            android:layout_marginTop="64dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/eventDetailDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eventDetailHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                tools:text="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/hour_short"
                tools:text="h" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/eventDetailMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/minute_short"
                tools:text="m" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/eventDetailSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                tools:text="00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/second_short"
                tools:text="s" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
